# cooklang-language-server

./: Cargo.toml  LICENSE  README.md  plan.md  research.md  test.cook
.github/workflows/: release.yml  rust.yml
data/: cookware.txt  ingredients.txt  time_units.txt  units.txt
docs/plans/: 2026-01-16-completion-lists-refactor-design.md  2026-01-16-completion-lists-refactor.md
editors/vscode/: README.md  language-configuration.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
src/: backend.rs  completion.rs  diagnostics.rs  document.rs  hover.rs  lib.rs  main.rs  semantic_tokens.rs  state.rs  symbols.rs
src/lsp/: from_proto.rs  line_endings.rs  mod.rs  to_proto.rs
src/utils/: component.rs  components.rs  line_index.rs  mod.rs  position.rs
