[package]
name = "cooklang-language-server"
version = "0.2.4"
edition = "2021"
license = "MIT"
description = "Language Server Protocol implementation for Cooklang"
repository = "https://github.com/cooklang/cooklang-language-server"
keywords = ["cooklang", "lsp", "language-server", "recipes"]
categories = ["development-tools", "text-editors"]

[dependencies]
# LSP
tower-lsp = "0.20"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Cooklang
# We only parse and diagnose: the parser, model, error types and aisle config.
# bundled_units (on by default) builds the unit database and is unused here -
# and because cargo unifies features, enabling it forced it on every consumer
# that shares our cooklang dependency.
cooklang = { version = "0.18", default-features = false, features = ["aisle"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dashmap = "6"
ropey = "1.6"

# Text handling
text-size = "1.1"
nohash-hasher = "0.2"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[[bin]]
name = "cooklang-lsp"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
